--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Vrinda Store Data Analysis using Excel<br />
+										<h2><a href="#"><br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Screenshot 2025-02-04 101159.jpg" alt="" /></a>
