Update index.html update1

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 										<h2><a href="#"><br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Screenshot 2025-02-04 101159.jpg" alt="" /></a>
-									<p>This is the project where we have analysed vrinda store data and cleaned it, used pivot table and pivot charts to build visualization.</p>
+									<a href="#" class="image fit"><img src=alt="" /></a>
+									<p></p>
 									<ul class="actions special">
-										<li><a href="https://github.com/RAHUL255148/Vrinda_sales_data_analysis" class="button">View Project</a></li>
+										<li><a href= class="button"></a></li>
 									</ul>
 								</article>
 								<article>
