--- a/index.html
+++ b/index.html
@@ -74,11 +74,15 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">abcde<br />
+										<h2><a href="#">Call Center Data Exploration<br />
 										</a></h2>
+										<p>In this project we have taken the call center representive data and 
+										looked at trends and patterns in the data.We used power pivot
+										feature of excel and calculated some DAX measures to do Exploratory
+										Data Analysis</p>
 									</header>
 									<a href="#" class="image fit"><img src=alt="" /></a>
-									<p></p>
+									<p></p> 
 									<ul class="actions special">
 										<li><a href= class="button"></a></li>
 									</ul>
