--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 										feature of excel and calculated some DAX measures to do Exploratory
 										Data Analysis</p>
 									</header>
-									<a href="#" class="image fit"><img src="images/Screenshot%202025-06-06%20085943.png"alt="" /></a>
+									<a href="#" class="image fit"><img src=""alt="" /></a>
 									<p></p> 
 									<ul class="actions special">
 										<li><a href= class="button"></a></li>
