--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
 										feature of excel and calculated some DAX measures to do Exploratory
 										Data Analysis</p>
 									</header>
-									<a href="#" class="image fit"><img src=""alt="" /></a>
-									<p></p> 
+									<a href="#" class="image fit"><img src="C:\Users\Rahul kartik\OneDrive\Pictures\Screenshot 2025-06-06 085943.png"alt="" /></a>
 									<ul class="actions special">
 										<li><a href= class="button"></a></li>
 									</ul>
