--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 										feature of excel and calculated some DAX measures to do Exploratory
 										Data Analysis</p>
 									</header>
-									<a href="#" class="image fit"><img src="https://github.com/RAHUL255148/rahul_portfolio.github.io/blob/main/images/Screenshot%202025-06-06%20085943.png"alt="images" /></a>
+									<a href="#" class="image fit"><img src="images/Screenshot 2025-02-03 085943".png"alt="" /></a>
 									<ul class="actions special">
 										<li><a href= class="button"></a></li>
 									</ul>
