--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 										<h2><a href="#">Walmart Data Analysis in MySQL<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src= "Walmart-Screenshot.png" alt="Screenshot" /></a>
+									<a href="#" class="image fit"><img src= "./Walmart-Screenshot.png" alt="Screenshot" /></a>
 									<p>This project contains walmart's sales data and we have used mySQL to analyse the data and answer some questions using database. </p>
 									<ul class="image fit">
 										<li><a href="https://github.com/RAHUL255148/Walmart_sql_project" class="button">View Project</a></li>
