--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Walmart Data Analysis in MySQL<br />
+										<h2><a href="#">Walmart Data Analysis in SQL<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Screenshot 2025-06-09 101643.png" alt="" /></a>
