--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Screenshot 2025-06-10 105450.png" alt="" /></a>
-									<p>This project contains walmart's sales data and we have used mySQL to analyse the data and answer some questions using database. </p>
+									<p>This project contains walmart's sales data and we have used SQL to analyse the data and answer some questions using database. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/RAHUL255148/Walmart_sql_project" class="button">View Project</a></li>
 									</ul>
